fixed footer on small screens

--- a/snowball challenge/css/style.css
+++ b/snowball challenge/css/style.css
@@ -28,6 +28,7 @@ html {
 }
 
 .menu {
+  display: block;
   padding: 30px 30px 20px;
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
@@ -68,19 +69,27 @@ html {
   line-height: 24px;
 }
 
-.footer-bottom {
-  background: #00b8fc;
-  color: #fff;
-  height: 30px;
+.img-info a {
+  text-decoration: none;
+  color: #111;
+}
+
+.img-info a:hover {
+  color: #00b8fc;
+}
+
+.footer {
+  /* display: none; */
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
+  padding: 5px;
+  background-color: #00b8fc;
+  color: white;
   text-align: center;
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  padding-top: 10px;
-  display: none;
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  height: 30px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -97,11 +106,8 @@ html {
     padding: 20px 0px 0px;
   }
 
-  .footer-bottom {
-    display: block;
-  }
-
   .menu {
+    display: block;
     padding: 20px 0px 0px;
   }
 }
@@ -124,11 +130,7 @@ html {
     padding: 20px 0px 0px 30px;
   }
 
-  .footer-bottom {
-    display: block;
-  }
-
   .menu {
-    padding: 20px 0px 0px 30px;
+    display: none;
   }
 }
